# pykota

./: AUTHORS  CREDITS  FAQ  LICENSE  MANIFEST.in  Makefile.am  NEWS  README  SECURITY  TODO  acinclude.m4  checkdeps.py  clean.sh  extractmsg.sh  gentarball.sh  setup.py
pykota/trunk/: CREDITS  FAQ  LICENSE  MANIFEST.in  NEWS  README  SECURITY  TODO  autogen.sh  checkdeps.py  clean.sh  configure.in  extractmsg.sh  gentarball.sh  setup.py
pykota/trunk/cgi-bin/: README  dumpykota.cgi  printquota.cgi  pykotadmin.cgi  pykotme.cgi
pykota/trunk/conf/: README  pykota.conf.sample  pykotadmin.conf.sample
pykota/trunk/contributed/: README  dump_bfd  pagecount.pl
pykota/trunk/debian/: README  changelog  conffiles  control  copyright  dirs  docs  examples  makedeb.sh  postinst  postrm  pykota.config  pykota.templates  rules
pykota/trunk/docs/: README  autopykota.sgml  dumpykota.sgml  edpykota.sgml  filterpykota.sgml  installation.sgml  introduction.sgml  pkbanner.sgml  pkbcodes.sgml  pkhint.sgml  pkinvoice.sgml  pknotify.sgml  pkprinters.sgml  pkrefund.sgml  pkturnkey.sgml  pkusers.sgml  pykosd.sgml  pykota-presentation.sxi  pykota.sgml  pykotme.sgml  repykota.sgml  scripts.sgml  warnpykota.sgml
pykota/trunk/initscripts/: README  README.ldap  README.postgresql  pykota-postgresql.sql  pykota.schema  upgrade-1.01-to-1.03.sh
pykota/trunk/logos/: README
pykota/trunk/man/: Makefile.am  README  autopykota.1  dumpykota.1  edpykota.1  genman.sh  pkbanner.1  pkbcodes.1  pkhint.1  pkinvoice.1  pkmail.1  pknotify.1  pkpgcounter.1  pkprinters.1  pkrefund.1  pksetup.1  pkturnkey.1  pkusers.1  pykosd.1  pykotme.1  repykota.1  waitprinter.sh.1  warnpykota.1
pykota/trunk/openoffice/: Makefile.am  README
pykota/trunk/po/: README  genmo.sh  pykota.pot
(+891 files in other folders)
