pykotadopostgresdir = $(datadir)/doc/pykota/
pykotadopostgres_DATA = 		\
	dbschema.png				\
	pykota-postgresql.sql		\
	README.postgresql			\
	upgrade-from-before-1.03.py	\
	upgrade-to-1.14.sql			\
	upgrade-to-1.16.sql			\
	VERYOLDpykota-upgrade-postgresql.sql

EXTRA_DIST = \
	$(pykotadopostgres_DATA)
